// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. video label with a title 1`] = `
<View
  style={
    Object {
      "alignItems": "flex-start",
      "flexDirection": "row",
      "marginTop": -1,
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "paddingBottom": 5,
      }
    }
  >
    <IconVideo
      fillColour="#008347"
      height={9}
    />
  </View>
  <Text
    style={
      Object {
        "color": "#008347",
        "flex": -1,
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 12,
        "fontWeight": "400",
        "letterSpacing": 1.2,
        "lineHeight": 11,
        "marginLeft": 5,
        "paddingTop": 1,
      }
    }
  >
    SWIMMING
  </Text>
</View>
`;

exports[`2. video label without a title shows video 1`] = `
<View
  style={
    Object {
      "alignItems": "flex-start",
      "flexDirection": "row",
      "marginTop": -1,
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "paddingBottom": 5,
      }
    }
  >
    <IconVideo
      fillColour="#008347"
      height={9}
    />
  </View>
  <Text
    style={
      Object {
        "color": "#008347",
        "flex": -1,
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 12,
        "fontWeight": "400",
        "letterSpacing": 1.2,
        "lineHeight": 11,
        "marginLeft": 5,
        "paddingTop": 1,
      }
    }
  >
    VIDEO
  </Text>
</View>
`;

exports[`3. video label with the black default colour 1`] = `
<View
  style={
    Object {
      "alignItems": "flex-start",
      "flexDirection": "row",
      "marginTop": -1,
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "paddingBottom": 5,
      }
    }
  >
    <IconVideo
      fillColour="black"
      height={9}
    />
  </View>
  <Text
    style={
      Object {
        "color": "black",
        "flex": -1,
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 12,
        "fontWeight": "400",
        "letterSpacing": 1.2,
        "lineHeight": 11,
        "marginLeft": 5,
        "paddingTop": 1,
      }
    }
  >
    VIDEO
  </Text>
</View>
`;
